[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
tokio = { version = "1.0", features = ["full"] }
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
autometrics = { git = "https://github.com/fiberplane/autometrics-rs", features= ["prometheus-exporter"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres"] }